Create structure of HTML

--- a/index.html
+++ b/index.html
@@ -17,15 +17,364 @@
 </head>
 <body>
 	<!-- Navbar -->
-	
+	<div class="container">
+		<nav class="navbar navbar-expand-lg navbar-light">
+			<a class="navbar-brand" href="">Bioskops</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+			  <div class="navbar-nav ml-auto">
+			  	<form action="#" class="form-inline">
+			  		<div class="input-group">
+			  			<input class="form-control" type="search" placeholder="Search Movies">
+			  			<div class="input-group-append">
+			  				<span class="input-group-text">@</span>
+			  			</div>
+			  		</div>
+			  	</form>
+			    <a class="nav-item nav-link" href="#">HOMEPAGE</a>
+			    <button class="btn btn-outline-primary rounded-pill">Get Ticket</button>
+			  </div>
+			</div>
+		</nav>
+	</div>
 	<!-- Navbar End -->
 
-	<!-- Main -->
+	<!-- Jumbotron -->
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container">
+			<p>Action | Adventure | Mystery</p>
+			<h1>Assasins Creed: Revellation</h1>
+			<div class="btn-group" role="group">
+				<button type="button" class="btn btn-outline-primary">Watch Trailer</button>
+				<button type="button" class="btn btn-outline-primary">Buy Ticket</button>
+			</div>
+		</div>
+	</div>
+	<!-- Jumbotron End -->
 
+	<!-- Main -->
+	<main>
+		<!-- Schedule -->
+		<section id="schedule">
+			<!-- Schedule Card -->
+			<section id="schedule-card">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-10">
+							<h3>Now Playing</h3>
+						</div>
+						<div class="col-md-2 text-right">
+							<h5>View Schedule</h5>
+						</div>
+					</div>
+					<div class="row no-gutters">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">Special title treatment</h5>
+									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">Special title treatment</h5>
+									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">Special title treatment</h5>
+									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">Special title treatment</h5>
+									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Schedule Card End -->
+
+			<!-- Schedule List -->
+			<section id="schedule-list">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-8">
+							<button class="btn btn-primary">Today Schedule</button>
+						</div>
+						<div class="col-md-4">
+							<button class="btn btn-primary">Friday, Mar, 13 2017</button>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<table class="table table-bordered">
+								<tr>
+									<td>08:45 AM</td>
+									<td>Neighbors 2: Parenthood vs Sisterhood</td>
+									<td>IXXV Jember</td>
+									<td>Studio</td>
+									<td>Buy Ticket</td>
+								</tr>
+								<tr>
+									<td>08:45 AM</td>
+									<td>Neighbors 2: Parenthood vs Sisterhood</td>
+									<td>IXXV Jember</td>
+									<td>Studio</td>
+									<td>Buy Ticket</td>
+								</tr>
+								<tr>
+									<td>08:45 AM</td>
+									<td>Neighbors 2: Parenthood vs Sisterhood</td>
+									<td>IXXV Jember</td>
+									<td>Studio</td>
+									<td>Buy Ticket</td>
+								</tr>
+								<tr>
+									<td>08:45 AM</td>
+									<td>Neighbors 2: Parenthood vs Sisterhood</td>
+									<td>IXXV Jember</td>
+									<td>Studio</td>
+									<td>Buy Ticket</td>
+								</tr>
+							</table>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Schedule List End -->
+		</section>
+		<!-- Schedule End -->
+
+		<!-- Synopsis -->
+		<section>
+			<!-- Synopsis Overview-->
+			<section>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-8">
+							<h3>Batman vs Superman: Dawn of Justice</h3>
+							<p>Action | Adventure | Thriller</p>
+						</div>
+						<div class="col-md-4 text-right">
+							<span>45 Seats Available</span>
+							<button class="btn btn-outline-primary rounded-pill">Buy Ticket</button>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-8">
+							<h1>Image Placeholder</h1>
+						</div>
+						<div class="col-md-4">
+							<div class="row">
+								<div class="col-md-12">
+									<p>Synopsis</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12 text-justify">
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aut iusto neque accusamus ipsam nesciunt unde fuga. Architecto optio nihil maxime impedit est quae dolores officiis, molestiae consectetur, quo ipsum?</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<p>23 Mar 2017</p>
+								</div>
+								<div class="col-md-6">
+									<p>23 Mar 2017</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<p>23 Mar 2017</p>
+								</div>
+								<div class="col-md-6">
+									<p>23 Mar 2017</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Synopsis Overview End -->
+
+			<!-- Schedule Slider -->
+			<section>
+				<div class="container">
+					<div class="row">
+						<div class="col-md">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">Special title treatment</h5>
+									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">Special title treatment</h5>
+									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">Special title treatment</h5>
+									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">Special title treatment</h5>
+									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">Special title treatment</h5>
+									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+									<a href="#" class="btn btn-primary">Go somewhere</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Schedule Slider End -->
+		</section>
+		<!-- Synopsis End -->
+
+		<!-- Facilities -->
+		<section>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8">
+						<button class="btn btn-primary">Our Bioskop Facilities</button>
+					</div>
+					<div class="col-md-4 text-right">
+						<span>Icon</span>
+						<span>Icon</span>
+						<span>Icon</span>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md">
+						<div class="card">
+							<div class="row">
+								<div class="col-md-2">
+									<span>Icon</span>
+								</div>
+								<div class="col-md-10">
+									<div class="card-body">
+										<h5 class="card-title">Special title treatment</h5>
+										<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+										<a href="#" class="btn btn-primary">Go somewhere</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md">
+						<div class="card">
+							<div class="row">
+								<div class="col-md-2">
+									<span>Icon</span>
+								</div>
+								<div class="col-md-10">
+									<div class="card-body">
+										<h5 class="card-title">Special title treatment</h5>
+										<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+										<a href="#" class="btn btn-primary">Go somewhere</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md">
+						<div class="card">
+							<div class="row">
+								<div class="col-md-2">
+									<span>Icon</span>
+								</div>
+								<div class="col-md-10">
+									<div class="card-body">
+										<h5 class="card-title">Special title treatment</h5>
+										<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+										<a href="#" class="btn btn-primary">Go somewhere</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Facilities End -->
+
+		<!-- Maps -->
+		<section>
+			<div class="container-fluid">
+				<p>Maps</p>
+			</div>
+		</section>
+		<!-- Maps End -->
+	</main>
 	<!-- Main End -->
 
 	<!-- Footer -->
-
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<h3>Bioskop</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo placeat cupiditate consectetur magni harum voluptatum doloremque ad molestias non cum!</p>
+					<p>JL PB Sudirman</p>
+					<p>JL PB Sudirman</p>
+					<p>JL PB Sudirman</p>
+				</div>
+				<div class="col-md-4">
+					<h3>Bioskop</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo placeat cupiditate consectetur magni harum voluptatum doloremque ad molestias non cum!</p>
+					<p>JL PB Sudirman</p>
+					<p>JL PB Sudirman</p>
+					<p>JL PB Sudirman</p>
+				</div>
+				<div class="col-md-4">
+					<h3>Bioskop</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo placeat cupiditate consectetur magni harum voluptatum doloremque ad molestias non cum!</p>
+					<p>JL PB Sudirman</p>
+					<p>JL PB Sudirman</p>
+					<p>JL PB Sudirman</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<!-- Footer End -->
 	
 	<!-- Optional JavaScript -->
