--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<!-- Icon -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-0c38nfCMzF8w8DBI+9nTWzApOpr1z0WuyswL4y6x/2ZTtmj/Ki5TedKeUcFusC/k" crossorigin="anonymous">
 
+	<!-- Flat Icon -->
+	<link rel="stylesheet" href="styles/font-icon/flaticon.css">
+
 	<!-- Bootstap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -50,11 +53,15 @@
 		<!-- Jumbotron -->
 		<div class="jumbotron jumbotron-fluid bg-transparent">
 			<div class="container">
-				<p>Action | Adventure | Mystery</p>
+				<nav class="nav">
+				  <a class="nav-link" href="#">Action</a>
+				  <a class="nav-link" href="#">Adventure</a>
+				  <a class="nav-link" href="#">Mystery</a>
+				</nav>
 				<h1>Assasins Creed: Revellation</h1>
 				<div class="btn-group" role="group">
-					<button type="button" class="btn btn-outline-primary">Watch Trailer</button>
-					<button type="button" class="btn btn-outline-primary">Buy Ticket</button>
+					<button type="button" class="btn btn-outline-primary"><i class="flaticon-play-button"></i>Watch Trailer</button>
+					<button type="button" class="btn btn-outline-primary"><i class="flaticon-business"></i>Buy Ticket</button>
 				</div>
 			</div>
 		</div>
