Styling schedule and synopsis

--- a/index.html
+++ b/index.html
@@ -74,50 +74,78 @@
 		<!-- Schedule -->
 		<section id="schedule">
 			<!-- Schedule Card -->
-			<section id="schedule-card">
+			<section class="schedule-card">
 				<div class="container">
-					<div class="row">
-						<div class="col-md-10">
+					<div class="row mb-3">
+						<div class="col-md-8">
 							<h3>Now Playing</h3>
 						</div>
-						<div class="col-md-2 text-right">
-							<h5>View Schedule</h5>
+						<div class="col-md-4 text-right">
+							<p><i class="flaticon-calendar"></i>View Schedule</p>
 						</div>
 					</div>
 					<div class="row no-gutters">
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-body">
-									<h5 class="card-title">Special title treatment</h5>
-									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+								<img src="images/neighbors.jpg" alt="">
+								<div class="card-img-overlay d-flex flex-column justify-content-end">
+									<h5 class="card-title">Neighbors 2</h5>
+									<div class="row">
+										<div class="col-md-6 text-left">
+											<p class="card-text">02:20 AM</p>
+										</div>
+										<div class="col-md-6 text-right">
+											<p class="card-text">Studio 1</p>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-body">
-									<h5 class="card-title">Special title treatment</h5>
-									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+								<img src="images/capital.jpg" alt="">
+								<div class="card-img-overlay d-flex flex-column justify-content-end">
+									<h5 class="card-title">Neighbors 2</h5>
+									<div class="row">
+										<div class="col-md-6 text-left">
+											<p class="card-text">02:20 AM</p>
+										</div>
+										<div class="col-md-6 text-right">
+											<p class="card-text">Studio 1</p>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-body">
-									<h5 class="card-title">Special title treatment</h5>
-									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+								<img src="images/capital.jpg" alt="">
+								<div class="card-img-overlay d-flex flex-column justify-content-end">
+									<h5 class="card-title">Inception</h5>
+									<div class="row">
+										<div class="col-md-6 text-left">
+											<p class="card-text">02:20 AM</p>
+										</div>
+										<div class="col-md-6 text-right">
+											<p class="card-text">Studio 2</p>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-body">
-									<h5 class="card-title">Special title treatment</h5>
-									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+								<img src="images/fury.jpg" alt="">
+								<div class="card-img-overlay d-flex flex-column justify-content-end">
+									<h5 class="card-title">Fury</h5>
+									<div class="row">
+										<div class="col-md-6 text-left">
+											<p class="card-text">07:45 PM</p>
+										</div>
+										<div class="col-md-6 text-right">
+											<p class="card-text">Studio 3</p>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -127,46 +155,53 @@
 			<!-- Schedule Card End -->
 
 			<!-- Schedule List -->
-			<section id="schedule-list">
+			<section class="schedule-list">
 				<div class="container">
-					<div class="row">
+					<div class="row mb-4">
 						<div class="col-md-8">
 							<button class="btn btn-primary">Today Schedule</button>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 text-right">
 							<button class="btn btn-primary">Friday, Mar, 13 2017</button>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-							<table class="table table-bordered">
+							<table class="table table-borderless">
 								<tr>
 									<td>08:45 AM</td>
-									<td>Neighbors 2: Parenthood vs Sisterhood</td>
+									<td class="text-primary">Neighbors 2: Parenthood vs Sisterhood</td>
 									<td>IXXV Jember</td>
-									<td>Studio</td>
-									<td>Buy Ticket</td>
+									<td>Studio 1</td>
+									<td class="text-primary">Buy Ticket</td>
 								</tr>
 								<tr>
 									<td>08:45 AM</td>
-									<td>Neighbors 2: Parenthood vs Sisterhood</td>
+									<td class="text-primary">Star Trek</td>
 									<td>IXXV Jember</td>
-									<td>Studio</td>
-									<td>Buy Ticket</td>
+									<td>Studio 2</td>
+									<td class="text-primary">Buy Ticket</td>
 								</tr>
 								<tr>
-									<td>08:45 AM</td>
-									<td>Neighbors 2: Parenthood vs Sisterhood</td>
-									<td>IXXV Jember</td>
-									<td>Studio</td>
-									<td>Buy Ticket</td>
+									<td>09:12 AM</td>
+									<td class="text-primary">Inception</td>
+									<td>IXXV Jakarta</td>
+									<td>Studio 3</td>
+									<td class="text-primary">Buy Ticket</td>
 								</tr>
 								<tr>
-									<td>08:45 AM</td>
-									<td>Neighbors 2: Parenthood vs Sisterhood</td>
-									<td>IXXV Jember</td>
-									<td>Studio</td>
-									<td>Buy Ticket</td>
+									<td>10:00 AM</td>
+									<td class="text-primary">Neighbors 2: Parenthood vs Sisterhood</td>
+									<td>IXXV Bandung</td>
+									<td>Studio 1</td>
+									<td class="text-primary">Buy Ticket</td>
+								</tr>
+								<tr>
+									<td>03:00 PM</td>
+									<td class="text-primary">Night Fury</td>
+									<td>IXXV Bandung</td>
+									<td>Studio 3</td>
+									<td class="text-primary">Buy Ticket</td>
 								</tr>
 							</table>
 						</div>
@@ -178,111 +213,109 @@
 		<!-- Schedule End -->
 
 		<!-- Synopsis -->
-		<section>
-			<!-- Synopsis Overview-->
-			<section>
-				<div class="container">
-					<div class="row">
-						<div class="col-md-8">
-							<h3>Batman vs Superman: Dawn of Justice</h3>
-							<p>Action | Adventure | Thriller</p>
+		<div class="synopsis-image">
+			<div class="synopsis">
+				<!-- Synopsis Overview-->
+				<section class="synopsis-overview">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-7">
+								<h5>Batman vs Superman: Dawn of Justice</h5>
+								<nav class="nav">
+								  <a class="nav-link" href="#">Action</a>
+								  <a class="nav-link" href="#">Adventure</a>
+								  <a class="nav-link" href="#">Mystery</a>
+								</nav>
+							</div>
+							<div class="col-md-5 text-right">
+								<span class="mr-4">45 Seats Available</span>
+								<button class="btn btn-outline-primary rounded-pill pl-2 pr-4"><i class="flaticon-business mr-2"></i>Buy Ticket</button>
+							</div>
 						</div>
-						<div class="col-md-4 text-right">
-							<span>45 Seats Available</span>
-							<button class="btn btn-outline-primary rounded-pill">Buy Ticket</button>
+						<div class="row">
+							<div class="col-md-7">
+								<h1>Image Placeholder</h1>
+							</div>
+							<div class="col-md-5">
+								<div class="row mb-3">
+									<div class="col-md-12">
+										<h5>Synopsis</h5>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-12 text-justify">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aut iusto neque accusamus ipsam nesciunt unde fuga. Architecto optio nihil maxime impedit est quae dolores officiis, molestiae consectetur, quo ipsum?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus hic, eum voluptatum magni distinctio fuga dolores non doloremque repellendus facilis odio alias, sapiente delectus officia consequatur nihil quo quos ad.</p>
+										<a href="#" class="text-primary">Read More</a>
+										<hr>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-6">
+										<p><i class="flaticon-calendar mr-3"></i>23 Mar 2017</p>
+									</div>
+									<div class="col-md-6">
+										<p><i class="flaticon-placeholder mr-3"></i>IXXV Jember</p>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-6">
+										<p><i class="flaticon-clock mr-3"></i>03:30 AM</p>
+									</div>
+									<div class="col-md-6">
+										<p><i class="flaticon-cinema mr-3"></i>Studio 1</p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-md-8">
-							<h1>Image Placeholder</h1>
-						</div>
-						<div class="col-md-4">
-							<div class="row">
-								<div class="col-md-12">
-									<p>Synopsis</p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-12 text-justify">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aut iusto neque accusamus ipsam nesciunt unde fuga. Architecto optio nihil maxime impedit est quae dolores officiis, molestiae consectetur, quo ipsum?</p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-6">
-									<p>23 Mar 2017</p>
-								</div>
-								<div class="col-md-6">
-									<p>23 Mar 2017</p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-6">
-									<p>23 Mar 2017</p>
-								</div>
-								<div class="col-md-6">
-									<p>23 Mar 2017</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- Synopsis Overview End -->
+				</section>
+				<!-- Synopsis Overview End -->
 
-			<!-- Schedule Slider -->
-			<section>
-				<div class="container">
-					<div class="row">
-						<div class="col-md">
-							<div class="card">
-								<div class="card-body">
-									<h5 class="card-title">Special title treatment</h5>
-									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+				<!-- Synopsis Slider -->
+				<section class="synopsis-slider">
+					<div class="container">
+						<div class="row">
+							<div class="col-md">
+								<div class="card">
+									<img src="images/synopsis/fight.jpg" alt="">
+									<div class="card-img-overlay">
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md">
-							<div class="card">
-								<div class="card-body">
-									<h5 class="card-title">Special title treatment</h5>
-									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+							<div class="col-md">
+								<div class="card">
+									<img src="images/synopsis/batman.jpg" alt="">
+									<div class="card-img-overlay">
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md">
-							<div class="card">
-								<div class="card-body">
-									<h5 class="card-title">Special title treatment</h5>
-									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+							<div class="col-md">
+								<div class="card">
+									<img src="images/synopsis/broken.jpg" alt="">
+									<div class="card-img-overlay">
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md">
-							<div class="card">
-								<div class="card-body">
-									<h5 class="card-title">Special title treatment</h5>
-									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+							<div class="col-md">
+								<div class="card">
+									<img src="images/synopsis/sevent.jpg" alt="">
+									<div class="card-img-overlay">
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md">
-							<div class="card">
-								<div class="card-body">
-									<h5 class="card-title">Special title treatment</h5>
-									<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+							<div class="col-md">
+								<div class="card">
+									<img src="images/synopsis/siri.jpg" alt="">
+									<div class="card-img-overlay">
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			</section>
-			<!-- Schedule Slider End -->
-		</section>
+				</section>
+				<!-- Synopsis Slider End -->
+			</div>
+		</div>
 		<!-- Synopsis End -->
 
 		<!-- Facilities -->
