styles/style.css

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 				<!-- Synopsis Overview-->
 				<section class="synopsis-overview">
 					<div class="container">
-						<div class="row">
+						<div class="row mb-4">
 							<div class="col-md-7">
 								<h5>Batman vs Superman: Dawn of Justice</h5>
 								<nav class="nav">
@@ -233,8 +233,8 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-md-7">
-								<h1>Image Placeholder</h1>
+							<div class="col-md-7 video">
+								<img src="images/batmanwins.png" alt="">
 							</div>
 							<div class="col-md-5">
 								<div class="row mb-3">
@@ -319,62 +319,61 @@
 		<!-- Synopsis End -->
 
 		<!-- Facilities -->
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8">
-						<button class="btn btn-primary">Our Bioskop Facilities</button>
+		<div class="facilities-image">
+			<div class="facilities">
+				<div class="container">
+					<div class="row mb-5">
+						<div class="col-md-8">
+							<button class="btn btn-primary">Our Bioskop Facilities</button>
+						</div>
+						<div class="col-md-4 text-right">
+							<i class="flaticon flaticon-furniture mr-3 rounded-circle"></i>
+							<i class="flaticon flaticon-popcorn mr-3 rounded-circle"></i>
+							<i class="flaticon flaticon-wifi-signal mr-3 rounded-circle"></i>
+						</div>
 					</div>
-					<div class="col-md-4 text-right">
-						<span>Icon</span>
-						<span>Icon</span>
-						<span>Icon</span>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md">
-						<div class="card">
-							<div class="row">
-								<div class="col-md-2">
-									<span>Icon</span>
-								</div>
-								<div class="col-md-10">
-									<div class="card-body">
-										<h5 class="card-title">Special title treatment</h5>
-										<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-										<a href="#" class="btn btn-primary">Go somewhere</a>
+					<div class="row">
+						<div class="col-md">
+							<div class="card">
+								<div class="row">
+									<div class="col-md-2 d-flex align-items-center">
+										<i class="flaticon flaticon-furniture rounded-circle"></i>
+									</div>
+									<div class="col-md-10">
+										<div class="card-body">
+											<h5 class="card-title">Sed ut perspicati</h5>
+											<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-md">
-						<div class="card">
-							<div class="row">
-								<div class="col-md-2">
-									<span>Icon</span>
-								</div>
-								<div class="col-md-10">
-									<div class="card-body">
-										<h5 class="card-title">Special title treatment</h5>
-										<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-										<a href="#" class="btn btn-primary">Go somewhere</a>
+						<div class="col-md">
+							<div class="card">
+								<div class="row">
+									<div class="col-md-2 d-flex align-items-center">
+										<i class="flaticon flaticon-popcorn rounded-circle"></i>
+									</div>
+									<div class="col-md-10">
+										<div class="card-body">
+											<h5 class="card-title">Totam rem aperiam</h5>
+											<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-md">
-						<div class="card">
-							<div class="row">
-								<div class="col-md-2">
-									<span>Icon</span>
-								</div>
-								<div class="col-md-10">
-									<div class="card-body">
-										<h5 class="card-title">Special title treatment</h5>
-										<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-										<a href="#" class="btn btn-primary">Go somewhere</a>
+						<div class="col-md">
+							<div class="card">
+								<div class="row">
+									<div class="col-md-2 d-flex align-items-center">
+										<i class="flaticon flaticon-wifi-signal rounded-circle"></i>
+									</div>
+									<div class="col-md-10">
+										<div class="card-body">
+											<h5 class="card-title">Voluptatem quia</h5>
+											<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -382,7 +381,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Facilities End -->
 
 		<!-- Maps -->
