--- a/index.html
+++ b/index.html
@@ -387,11 +387,7 @@
 		<!-- Maps -->
 		<section class="maps">
 			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.241647226428!2d106.82485951501056!3d-6.362763795395706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ec1a804e8b85%3A0xd7bf80e1977cea07!2sUniversity+of+Indonesia!5e0!3m2!1sen!2sid!4v1566056575205!5m2!1sen!2sid" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-					</div>
-				</div>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.241647226428!2d106.82485951501056!3d-6.362763795395706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ec1a804e8b85%3A0xd7bf80e1977cea07!2sUniversity+of+Indonesia!5e0!3m2!1sen!2sid!4v1566056575205!5m2!1sen!2sid" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		</section>
 		<!-- Maps End -->
@@ -399,33 +395,72 @@
 	<!-- Main End -->
 
 	<!-- Footer -->
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<h3>Bioskop</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo placeat cupiditate consectetur magni harum voluptatum doloremque ad molestias non cum!</p>
-					<p>JL PB Sudirman</p>
-					<p>JL PB Sudirman</p>
-					<p>JL PB Sudirman</p>
+	<div class="footer-image">
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-5">
+						<h5 class="mb-3">Bioskop</h5>
+						<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, magni.</p>
+						<ul>
+							<li><i class="flaticon flaticon-placeholder mr-3"></i>J.L P.B Sudirman 23 Jember</li>
+							<li><i class="flaticon flaticon-envelope mr-3"></i>contact@bioskop.com</li>
+							<li><i class="flaticon flaticon-telephone mr-3"></i>+62 892 1235 3323</li>
+						</ul>
+					</div>
+					<div class="col-md-3">
+						<h5 class="mb-3">Movie Categories</h5>
+						<div class="row">
+							<div class="col-md-6">
+								<ul>
+									<li>Action</li>
+									<li>Adventure</li>
+									<li>Comedy</li>
+									<li>Documentary</li>
+									<li>Family</li>
+								</ul>
+							</div>
+							<div class="col-md-6">
+								<ul>
+									<li>Biography</li>
+									<li>Crime</li>
+									<li>Drama</li>
+									<li>Fantasy</li>
+									<li>Horror</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<h5 class="mb-3">Subscribe Newsletter</h5>
+						<p>Subscribe now to get 100 exclusive photo & two newsletter per month</p>
+						<form action="#" class="mb-4">
+							<div class="group">
+								<input type="text" class="form-control" placeholder="Enter Your Email...">
+							</div>
+						</form>
+						<ul class="nav">
+						  <li class="nav-item">
+						    <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
+						  </li>
+						  <li class="nav-item">
+						    <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
+						  </li>
+						  <li class="nav-item">
+						    <a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
+						  </li>
+						</ul>
+					</div>
 				</div>
-				<div class="col-md-4">
-					<h3>Bioskop</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo placeat cupiditate consectetur magni harum voluptatum doloremque ad molestias non cum!</p>
-					<p>JL PB Sudirman</p>
-					<p>JL PB Sudirman</p>
-					<p>JL PB Sudirman</p>
-				</div>
-				<div class="col-md-4">
-					<h3>Bioskop</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo placeat cupiditate consectetur magni harum voluptatum doloremque ad molestias non cum!</p>
-					<p>JL PB Sudirman</p>
-					<p>JL PB Sudirman</p>
-					<p>JL PB Sudirman</p>
+				<hr>
+				<div class="row text-center pt-2 pb-2">
+					<div class="col-md-12">
+						<p>Copy Right 2017 Bioskop - All Right Reserved</p>
+					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
+	</div>
 	<!-- Footer End -->
 	
 	<!-- Optional JavaScript -->
