--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
 
 		<!-- Maps -->
 		<section class="maps">
-			<div class="container-fluid">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.241647226428!2d106.82485951501056!3d-6.362763795395706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ec1a804e8b85%3A0xd7bf80e1977cea07!2sUniversity+of+Indonesia!5e0!3m2!1sen!2sid!4v1566056575205!5m2!1sen!2sid" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<div class="container-fluid embed-responsive embed-responsive-21by9" style="height: 500px">
+				<iframe style="height: 500px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.241647226428!2d106.82485951501056!3d-6.362763795395706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ec1a804e8b85%3A0xd7bf80e1977cea07!2sUniversity+of+Indonesia!5e0!3m2!1sen!2sid!4v1566056575205!5m2!1sen!2sid" width="100%" allowfullscreen></iframe>
 			</div>
 		</section>
 		<!-- Maps End -->
